# HenchmanServices

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Doxyfile.in  README.md  example_service.ini  vcpkg-configuration.json  vcpkg.json  version
.github/workflows/: cmake-multi-platform.yml
DatabaseManager/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h
EmployeesManager/: CMakeLists.txt  EmployeesManager.cpp  EmployeesManager.h
EventManager/: CMakeLists.txt  EventManager.cpp  EventManager.h
HenchmanService/: CMakeLists.txt  HenchmanService.cpp  HenchmanService.h
HenchmanServiceController/: CMakeLists.txt  HenchmanServiceController.cpp  HenchmanServiceController.h
HenchmanServiceException/: CMakeLists.txt  HenchmanServiceException.cpp  HenchmanServiceException.h
HenchmanServiceHelper/: CMakeLists.txt  ServiceHelper.cpp  ServiceHelper.h
HenchmanServiceLibrary/: CMakeLists.txt  HenchmanServiceLibrary.cpp  HenchmanServiceLibrary.h
HenchmanServiceMailer/: CMakeLists.txt
HenchmanServiceRegistry/: CMakeLists.txt  RegistryManager.cpp
HenchmanServiceSQLiteManager/: CMakeLists.txt  SQLiteManager.cpp  SQLiteManager.h
HenchmanServiceTaskScheduler/: CMakeLists.txt  HenchmanServiceTaskScheduler.cpp  HenchmanServiceTaskScheduler.h
HenchmanServices/: CMakeLists.txt  HenchmanService.cpp  HenchmanService.h  HenchmanServices.cpp  HenchmanServices.h
HenchmanServices/include/: HenchmanServices.h
MailerManager/: HenchmanServiceMailer.cpp  HenchmanServiceMailer.h
NetworkManager/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h
NetworkManager_original/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h
QueryManager/: CMakeLists.txt  QueryManager.cpp  QueryManager.h
RegistryManager/: CMakeLists.txt  RegistryManager.cpp  RegistryManager.h
SQLiteManager/: CMakeLists.txt  SQLiteManager.cpp  SQLiteManager.h
SQLiteManager2/: CMakeLists.txt  SQLiteManager2.cpp  SQLiteManager2.h
ServiceController/: CMakeLists.txt  ServiceController.cpp  ServiceController.h
ServiceHelper/: CMakeLists.txt  ServiceHelper.cpp  ServiceHelper.h
TRAKEntriesManager/: CMakeLists.txt  TRAKEntriesManager.cpp  TRAKEntriesManager.h
TRAKManager/: CMakeLists.txt  TRAKManager.cpp  TRAKManager.h
UsersManager/: CMakeLists.txt  UsersManager.cpp  UsersManager.h
cmake/: CPackConfig.cmake
